<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    
    <TextView
        android:id="@+id/tv_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_day"
        android:layout_marginTop="44dp"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:typeface="monospace"
        android:text="@string/tv_header" />
    
    <TextView
        android:id="@+id/tv_past"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_header"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:typeface="monospace"
        android:textColor="@color/past"
        android:text="@string/tv_past" />

    <TextView
        android:id="@+id/tv_current"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tv_past"
        android:gravity="center_horizontal"
        android:textSize="25dp"
        android:typeface="monospace"
        android:textColor="@color/current"
        android:text="@string/tv_current" />
    
    <TextView
        android:id="@+id/tv_future"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_current"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:typeface="monospace"
        android:textColor="@color/future"
        android:text="@string/tv_future" />

    <Button
        android:id="@+id/b_close"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/b_close" />
    
    <TextView
        android:id="@+id/tv_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="15dp"
        android:text="@string/tv_day" />
    
</RelativeLayout>